added new API endpoints for managing user notification subscriptions, fixed notification settings not persisting bug, and other minor bugs
